- Aggiunto break alla modificaFarmaco di EntityCatalogo per chiudere la ricerca se è andata a buon fine - getFirst() -> get(0) in VisualizzaStoricoOrdiniTest - Aggiunto il nuovo CFG + test suite - Prima revisione test suites + aggiunte altre